[gd_scene load_steps=22 format=3 uid="uid://yfevho5xx5qg"]

[ext_resource type="Script" path="res://UIScenes/main_screen.gd" id="1_25j1r"]
[ext_resource type="Texture2D" uid="uid://cahtjifmsiqhm" path="res://UITextures/BGTextures/main.png" id="1_uh6x3"]
[ext_resource type="Texture2D" uid="uid://cj3g7l2prnd31" path="res://UITextures/PanelElements/player_panel.png" id="2_37prv"]
[ext_resource type="FontFile" uid="uid://pv0ja7y8uilm" path="res://UITextures/Fonts/HankenGrotesk-Bold.ttf" id="3_5uujb"]
[ext_resource type="Texture2D" uid="uid://br0hqqbj0u2vj" path="res://UITextures/Buttons/main_button.png" id="3_i1nbb"]
[ext_resource type="Texture2D" uid="uid://dxe2lv4xpcfs2" path="res://UITextures/PanelElements/currency_panel.png" id="3_uxccu"]
[ext_resource type="FontFile" uid="uid://s5ys4podnve" path="res://UITextures/Fonts/HankenGrotesk-VariableFont_wght.ttf" id="4_l7enx"]
[ext_resource type="Texture2D" uid="uid://p8lar73slk4w" path="res://UITextures/Progress/stat_base.png" id="5_xq7xp"]
[ext_resource type="Texture2D" uid="uid://dl3fdw70kg7l4" path="res://UITextures/Progress/stat_progress.png" id="6_k54wo"]
[ext_resource type="Texture2D" uid="uid://d2liwvto7p64l" path="res://UITextures/Progress/player_exp_base.png" id="8_qls6c"]
[ext_resource type="Texture2D" uid="uid://74d22xpi5g4s" path="res://UITextures/Progress/player_exp_progress.png" id="9_s07bm"]
[ext_resource type="Texture2D" uid="uid://dir30ha1xy1ee" path="res://UITextures/PanelElements/Square slot 4.png" id="11_ddq8t"]
[ext_resource type="PackedScene" uid="uid://b3eiw5d6jk827" path="res://Components/Chat/chat_box.tscn" id="12_b1h6r"]
[ext_resource type="Texture2D" uid="uid://b1tsal8jhxld4" path="res://UITextures/Buttons/PanelTextures/normal_mode.png" id="12_p87ie"]
[ext_resource type="Texture2D" uid="uid://cyl1bqw5cea6d" path="res://UITextures/Buttons/mode_normal.png" id="13_cv2mc"]
[ext_resource type="Texture2D" uid="uid://b0nji0srtvb14" path="res://UITextures/Buttons/PanelTextures/main_hero1.png" id="16_4hgnp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vtby7"]
bg_color = Color(0.396078, 0.396078, 0.396078, 0.219608)

[sub_resource type="Animation" id="Animation_lx26j"]
resource_name = "chat_slide"
length = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel/BackgroundTexture/chat_box:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1203, 94), Vector2(923, 94)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Panel/VBoxContainer/Hero:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_nrd58"]
resource_name = "fade_in"
length = 1.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.176471, 0.176471, 0.176471, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_oonh1"]
resource_name = "store_animation"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pflmc"]
_data = {
"chat_slide": SubResource("Animation_lx26j"),
"fade_in": SubResource("Animation_nrd58"),
"store_animation": SubResource("Animation_oonh1")
}

[node name="main_screen" type="Control"]
clip_contents = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_25j1r")

[node name="Panel" type="Panel" parent="."]
show_behind_parent = true
z_index = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_vtby7")

[node name="BackgroundTexture" type="TextureRect" parent="Panel"]
unique_name_in_owner = true
self_modulate = Color(0.682353, 0.682353, 0.682353, 0.878431)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
texture = ExtResource("1_uh6x3")

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/BackgroundTexture"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.01
anchor_top = 0.0166667
anchor_right = 0.981667
anchor_bottom = 0.238889
metadata/_edit_use_anchors_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/BackgroundTexture/HBoxContainer"]
custom_minimum_size = Vector2(450, 120)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Panel/BackgroundTexture/HBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(450, 120)
layout_mode = 2
mouse_filter = 0
texture = ExtResource("2_37prv")
expand_mode = 1
stretch_mode = 4

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/BackgroundTexture/HBoxContainer/HBoxContainer/TextureRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.293333
anchor_top = 0.291667
anchor_right = 0.92
anchor_bottom = 0.883333
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0
metadata/_edit_use_anchors_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/BackgroundTexture/HBoxContainer/HBoxContainer/TextureRect/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0

[node name="PlayerName" type="Label" parent="Panel/BackgroundTexture/HBoxContainer/HBoxContainer/TextureRect/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_5uujb")
theme_override_font_sizes/font_size = 20
text = "kaetaro13"
vertical_alignment = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/BackgroundTexture/HBoxContainer/HBoxContainer/TextureRect/VBoxContainer"]
z_index = 1
layout_mode = 2

[node name="PlayerRank" type="Label" parent="Panel/BackgroundTexture/HBoxContainer/HBoxContainer/TextureRect/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
z_index = -1
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("4_l7enx")
theme_override_font_sizes/font_size = 16
text = "Platinum"

[node name="ProfileButton" type="Button" parent="Panel/BackgroundTexture/HBoxContainer/HBoxContainer/TextureRect" groups=["MainButtons"]]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = -1
anchor_left = -0.0133333
anchor_top = -0.0499998
anchor_right = 0.208889
anchor_bottom = 0.783333
mouse_force_pass_scroll_events = false
theme_override_colors/icon_focus_color = Color(0, 0, 0, 0)
flat = true

[node name="StatsWheel" type="TextureProgressBar" parent="Panel/BackgroundTexture/HBoxContainer/HBoxContainer/TextureRect"]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 30)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.857778
anchor_top = 0.241667
anchor_right = 0.968889
anchor_bottom = 0.658333
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 0
fill_mode = 4
nine_patch_stretch = true
texture_under = ExtResource("5_xq7xp")
texture_progress = ExtResource("6_k54wo")
metadata/_edit_use_anchors_ = true

[node name="StatButton" type="TextureButton" parent="Panel/BackgroundTexture/HBoxContainer/HBoxContainer/TextureRect/StatsWheel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.14
anchor_top = 0.16
anchor_right = 0.860001
anchor_bottom = 0.800001
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="Level" type="Label" parent="Panel/BackgroundTexture/HBoxContainer/HBoxContainer/TextureRect"]
unique_name_in_owner = true
layout_mode = 0
anchor_left = 0.0533333
anchor_top = 0.191667
anchor_right = 0.142222
anchor_bottom = 0.55
theme_override_fonts/font = ExtResource("3_5uujb")
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="TextureProgressBar" type="TextureProgressBar" parent="Panel/BackgroundTexture/HBoxContainer/HBoxContainer/TextureRect"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.206667
anchor_top = 0.458333
anchor_right = 0.971111
anchor_bottom = 1.18333
size_flags_vertical = 3
value = 50.0
nine_patch_stretch = true
texture_under = ExtResource("8_qls6c")
texture_progress = ExtResource("9_s07bm")
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/BackgroundTexture/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/BackgroundTexture/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Panel/BackgroundTexture/HBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(175, 50)
layout_mode = 2
texture = ExtResource("3_uxccu")
expand_mode = 1
stretch_mode = 4

[node name="Native" type="Label" parent="Panel/BackgroundTexture/HBoxContainer/VBoxContainer/HBoxContainer/TextureRect"]
unique_name_in_owner = true
custom_minimum_size = Vector2(93, 30)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.217143
anchor_top = 0.16
anchor_right = 0.92
anchor_bottom = 0.76
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_5uujb")
theme_override_font_sizes/font_size = 16
horizontal_alignment = 2
vertical_alignment = 1
clip_text = true
text_overrun_behavior = 3
metadata/_edit_use_anchors_ = true

[node name="TextureRect2" type="TextureRect" parent="Panel/BackgroundTexture/HBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(175, 50)
layout_mode = 2
texture = ExtResource("3_uxccu")
expand_mode = 1
stretch_mode = 4

[node name="BeatsBalance" type="Label" parent="Panel/BackgroundTexture/HBoxContainer/VBoxContainer/HBoxContainer/TextureRect2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(93, 30)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.217143
anchor_top = 0.16
anchor_right = 0.92
anchor_bottom = 0.76
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_5uujb")
theme_override_font_sizes/font_size = 16
horizontal_alignment = 2
vertical_alignment = 1
clip_text = true
text_overrun_behavior = 3
metadata/_edit_use_anchors_ = true

[node name="TextureRect3" type="TextureRect" parent="Panel/BackgroundTexture/HBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(175, 50)
layout_mode = 2
texture = ExtResource("3_uxccu")
expand_mode = 1
stretch_mode = 4

[node name="ThumpBalance" type="Label" parent="Panel/BackgroundTexture/HBoxContainer/VBoxContainer/HBoxContainer/TextureRect3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(93, 30)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.217143
anchor_top = 0.16
anchor_right = 0.92
anchor_bottom = 0.76
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_5uujb")
theme_override_font_sizes/font_size = 16
horizontal_alignment = 2
vertical_alignment = 1
clip_text = true
text_overrun_behavior = 3
metadata/_edit_use_anchors_ = true

[node name="TextureRect4" type="TextureRect" parent="Panel/BackgroundTexture/HBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(175, 50)
layout_mode = 2
texture = ExtResource("3_uxccu")
expand_mode = 1
stretch_mode = 4

[node name="KMR" type="Label" parent="Panel/BackgroundTexture/HBoxContainer/VBoxContainer/HBoxContainer/TextureRect4"]
unique_name_in_owner = true
custom_minimum_size = Vector2(93, 30)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.217143
anchor_top = 0.16
anchor_right = 0.92
anchor_bottom = 0.76
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_5uujb")
theme_override_font_sizes/font_size = 16
horizontal_alignment = 2
vertical_alignment = 1
clip_text = true
text_overrun_behavior = 3
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/BackgroundTexture"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0125
anchor_top = 0.275926
anchor_right = 0.9875
anchor_bottom = 0.996296
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/BackgroundTexture/VBoxContainer"]
custom_minimum_size = Vector2(0, 330)
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/BackgroundTexture/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="Panel/BackgroundTexture/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="Panel/BackgroundTexture/VBoxContainer/HBoxContainer2/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("11_ddq8t")
expand_mode = 1
stretch_mode = 6

[node name="TextureRect" type="TextureRect" parent="Panel/BackgroundTexture/VBoxContainer/HBoxContainer2/VBoxContainer2/TextureRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.196382
anchor_top = -0.284848
anchor_right = 0.832041
anchor_bottom = 0.824242
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("12_p87ie")
expand_mode = 1
flip_h = true
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="Panel/BackgroundTexture/VBoxContainer/HBoxContainer2/VBoxContainer2/TextureRect/TextureRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.150406
anchor_top = 0.825137
anchor_right = 1.12602
anchor_bottom = 1.12022
texture = ExtResource("13_cv2mc")
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="Panel/BackgroundTexture/VBoxContainer/HBoxContainer2/VBoxContainer2/TextureRect/TextureRect/TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_top = -3.0
offset_right = -1.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_5uujb")
theme_override_font_sizes/font_size = 24
text = "NORMAL"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameModeButton" type="TextureButton" parent="Panel/BackgroundTexture/VBoxContainer/HBoxContainer2/VBoxContainer2/TextureRect" groups=["MainButtons"]]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.165375
anchor_top = -0.236364
anchor_right = 0.839793
anchor_bottom = 0.875758
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer3" type="VBoxContainer" parent="Panel/BackgroundTexture/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer3" type="HBoxContainer" parent="Panel/BackgroundTexture/VBoxContainer"]
z_index = 1
layout_mode = 2

[node name="StoreButton" type="TextureButton" parent="Panel/BackgroundTexture/VBoxContainer/HBoxContainer3" groups=["MainButtons"]]
unique_name_in_owner = true
custom_minimum_size = Vector2(220, 55)
layout_mode = 2
size_flags_vertical = 0
texture_normal = ExtResource("3_i1nbb")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="Panel/BackgroundTexture/VBoxContainer/HBoxContainer3/StoreButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.0
offset_top = -14.5
offset_right = 47.0
offset_bottom = 19.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_5uujb")
theme_override_font_sizes/font_size = 20
text = "Store"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MissionsButton" type="TextureButton" parent="Panel/BackgroundTexture/VBoxContainer/HBoxContainer3" groups=["MainButtons"]]
custom_minimum_size = Vector2(220, 55)
layout_mode = 2
size_flags_vertical = 0
texture_normal = ExtResource("3_i1nbb")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="Panel/BackgroundTexture/VBoxContainer/HBoxContainer3/MissionsButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.0
offset_top = -14.5
offset_right = 47.0
offset_bottom = 19.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_5uujb")
theme_override_font_sizes/font_size = 20
text = "Missions"
vertical_alignment = 1

[node name="InventoryButton" type="TextureButton" parent="Panel/BackgroundTexture/VBoxContainer/HBoxContainer3" groups=["MainButtons"]]
custom_minimum_size = Vector2(220, 55)
layout_mode = 2
size_flags_vertical = 0
texture_normal = ExtResource("3_i1nbb")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="Panel/BackgroundTexture/VBoxContainer/HBoxContainer3/InventoryButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.0
offset_top = -14.5
offset_right = 47.0
offset_bottom = 19.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_5uujb")
theme_override_font_sizes/font_size = 20
text = "Inventory"
vertical_alignment = 1

[node name="LeaderboardButton" type="TextureButton" parent="Panel/BackgroundTexture/VBoxContainer/HBoxContainer3" groups=["MainButtons"]]
custom_minimum_size = Vector2(220, 55)
layout_mode = 2
size_flags_vertical = 0
texture_normal = ExtResource("3_i1nbb")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="Panel/BackgroundTexture/VBoxContainer/HBoxContainer3/LeaderboardButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.0
offset_top = -14.5
offset_right = 47.0
offset_bottom = 19.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_5uujb")
theme_override_font_sizes/font_size = 20
text = "Leaderboard"
vertical_alignment = 1

[node name="chat_box" parent="Panel/BackgroundTexture" instance=ExtResource("12_b1h6r")]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchor_left = 0.765833
anchor_right = 1.04917
offset_left = 284.0
offset_top = 4.57764e-05
offset_right = 284.0
offset_bottom = 6.10352e-05

[node name="VBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.725833
anchor_top = 0.12037
anchor_right = 1.06167
anchor_bottom = 1.15741
offset_right = 0.00012207
grow_horizontal = 0
grow_vertical = 2
mouse_filter = 2
alignment = 2
metadata/_edit_use_anchors_ = true

[node name="Hero" type="TextureRect" parent="Panel/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 560)
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
texture = ExtResource("16_4hgnp")
expand_mode = 1
stretch_mode = 4

[node name="FilterPanel" type="Panel" parent="."]
unique_name_in_owner = true
visible = false
top_level = true
z_index = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_pflmc")
}
autoplay = "fade_in"

[connection signal="pressed" from="Panel/BackgroundTexture/HBoxContainer/HBoxContainer/TextureRect/ProfileButton" to="." method="_on_profile_button_pressed"]
[connection signal="pressed" from="Panel/BackgroundTexture/HBoxContainer/HBoxContainer/TextureRect/StatsWheel/StatButton" to="." method="_on_stat_button_pressed"]
[connection signal="pressed" from="Panel/BackgroundTexture/VBoxContainer/HBoxContainer2/VBoxContainer2/TextureRect/GameModeButton" to="." method="_on_game_mode_button_pressed"]
[connection signal="pressed" from="Panel/BackgroundTexture/VBoxContainer/HBoxContainer3/StoreButton" to="." method="_on_store_button_pressed"]
[connection signal="pressed" from="Panel/BackgroundTexture/VBoxContainer/HBoxContainer3/InventoryButton" to="." method="_on_inventory_button_pressed"]
[connection signal="gui_input" from="FilterPanel" to="." method="_on_panel_2_gui_input"]
